--- a/_patterns/sections/homepage-welcome.html
+++ b/_patterns/sections/homepage-welcome.html
@@ -1,2 +1,6 @@
-<h2>Welcome</h2>
-<p>We offer a large variety of mythological creatures for purchase. We simply supply the highest quality animals available on the planet and provide you with their individual care instructions. Our creatures are healthy and vaccinated - our 100% guarantee.</p>
+<div>
+
+  <h2 class="push-1-4">Welcome</h2>
+  <p>We offer a large variety of mythological creatures for purchase. We simply supply the highest quality animals available on the planet and provide you with their individual care instructions. Our creatures are healthy and vaccinated - our 100% guarantee.</p>
+
+</div>
