--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -5,7 +5,7 @@
       <ul class="push-0">
         <li><a href="/index/">Home</a></li>
         <li><a href="/about/">About</a></li>
-        <li><a href="/products/">Products</a></li>
+        <li {% if page.highlight_nav == 'products' %}current{% endif %}><a href="/products/">Products</a></li>
         <li><a href="/contact/">Contact</a></li>
 
         <div class="search-container">
