--- a/_patterns/sections/testimonial-section.html
+++ b/_patterns/sections/testimonial-section.html
@@ -1,9 +1,13 @@
-<h3>Testimonial</h3>
+<div>
 
-<p>We offer a large variety of mythological creatures for purchase. We simply supply the highest quality animals available on the planet and provide you with their individual care instructions. Our creatures are healthy and vaccinated - our 100% guarantee.</p>
+  <h3 class="push-1-4">Testimonial</h3>
 
-<div class="testimonialimage">
-  <img class="img-flex max-length" src="/images/testimonialimage.png" alt="">
+  <p>We offer a large variety of mythological creatures for purchase. We simply supply the highest quality animals available on the planet and provide you with their individual care instructions. Our creatures are healthy and vaccinated - our 100% guarantee.</p>
+
+  <div class="testimonialimage">
+    <img class="img-flex max-length" src="/images/testimonialimage.png" alt="">
+  </div>
+
+  <p class="italic">- Sven Svensalot</p>
+
 </div>
-
-<p class="italic">- Sven Svensalot</p>
