--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
-{% pattern banner/homepagebanner %}
+{% pattern banner/homepagebanner button_text="See Collection" button_url="/products/" heading="The Creature Collection" text="Browse our collection of feisty beasts." %}
 
-<h1>Home</h1>
+<div class="grid">
+  <div class="gutter unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+    {% pattern sections/homepage-welcome %}
+  </div>
+  <div class="gutter unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+    {% pattern sections/testimonial-section %}
+  </div>
+</div>
