--- a/_patterns/photos/homepage-banner.html
+++ b/_patterns/photos/homepage-banner.html
@@ -1,3 +1,3 @@
 <div class="homepagebanner">
-  <img class="img-flex" src="/images/banner-img.png" alt="">
+  <img class="img-flex" src="/images/banner-img.png" alt="griffin banner">
 </div>
