--- a/_patterns/photos/products-banner.html
+++ b/_patterns/photos/products-banner.html
@@ -1,3 +1,3 @@
 <div class="productsbanner">
-  <img class="img-flex" src="/images/products-banner.png" alt="">
+  <img class="img-flex" src="/images/products-banner.png" alt="dragon banner">
 </div>
