--- a/_patterns/sections/homepage-welcome.html
+++ b/_patterns/sections/homepage-welcome.html
@@ -2,5 +2,9 @@
 
   <h2 class="push-1-4">Welcome</h2>
   <p>We offer a large variety of mythological creatures for purchase. We simply supply the highest quality animals available on the planet and provide you with their individual care instructions. Our creatures are healthy and vaccinated - our 100% guarantee.</p>
+  <p>We work with decicated volunteers, foster homes, local veterinarians, and trainers. We are able to rescue creatures in need and provide them with loving care until a well-matched carefully screened home is found.</p>
+  <p>Mythological Creature Market works hard to enable a better understanding between humans and monsters, as most of these creatures in our care have not only been mistreated in the past, but have also been misunderstood. We strive to improve relations between animals and beasts, as well as educate people to a higher level of understanding when it comes to any creature-related issue.
+
+ </p>
 
 </div>
