--- a/_patterns/photos/checkout-banner.html
+++ b/_patterns/photos/checkout-banner.html
@@ -1,3 +1,3 @@
 <div class="checkoutbanner">
-  <img class="img-flex" src="/images/checkout-banner.png" alt="">
+  <img class="img-flex" src="/images/checkout-banner.png" alt="cryptid banner">
 </div>
