--- a/_patterns/photos/product-page-banner.html
+++ b/_patterns/photos/product-page-banner.html
@@ -1,3 +1,3 @@
 <div class="productpagebanner">
-  <img class="img-flex" src="/images/productpage-banner.png" alt="">
+  <img class="img-flex" src="/images/productpage-banner.png" alt="griffin banner">
 </div>
