--- a/_patterns/photos/testimonial-image.html
+++ b/_patterns/photos/testimonial-image.html
@@ -1,3 +1,3 @@
 <div class="testimonialimage">
-  <img class="img-flex" src="/images/testimonialimage.png" alt="">
+  <img class="img-flex" src="/images/testimonialimage.png" alt="headshot of a man">
 </div>
