Add headings to repository

--- a/products.html
+++ b/products.html
@@ -5,3 +5,5 @@ layout: default
 <h1>Products</h1>
 
 {% pattern nav/nav %}
+
+{% pattern banner/banner heading="Products" text="Shop for your original art!"}
