--- a/index.html
+++ b/index.html
@@ -5,3 +5,5 @@ layout: default
 <h1>Home!</h1>
 
 {% pattern nav/nav %}
+
+{% pattern banner/banner heading="Make it Original. Make it Yours." text="Locally made handcrafted original art" %}
