--- a/_patterns/sections/sections.html
+++ b/_patterns/sections/sections.html
@@ -2,7 +2,7 @@
 <div class="unit xs-1 s-1 m-1-2 l-1-2 grid left">
   <figure role="group" class="img-flex push-0">
     <h3 class="push-0 pad-b-1-2 left gutter">Black Wonderland Hoodie</h3>
-    <img class="black-hoodie" alt="" src="/images/hoodie-black.png" aria-details="black-hoodie">
+    <img alt="" src="/images/hoodie-black.png" aria-details="black-hoodie">
     <figcaption class="mega left gutter"><strong>$ 69.99</strong></figcaption>
   </figure>
 </div>
