Add lesson to config

--- a/products.html
+++ b/products.html
@@ -6,4 +6,4 @@ layout: default
 
 {% pattern nav/nav %}
 
-{% pattern banner/banner heading="Products" text="Shop for your original art!"}
+{% pattern banner/banner heading="Products" text="Shop for your original art!" %}
