--- a/_patterns/cards/product.html
+++ b/_patterns/cards/product.html
@@ -1,5 +1,5 @@
 <div class="card pad-t-1">
-  <img class="img-flex push-0" src="/images/hoodie-black.png" alt="">
+  <img class="max-width img-flex push-0" src="/images/hoodie-black.png" alt="">
   <h3 class="island-1-2 push-0">Black Wonderland Hoodie</h3>
   <div class="blackbg clearfix">{% pattern buttons/seemore %} <p class="price right push-0">$69.99</p></div>
 </div>
