--- a/_patterns/navigation/banner.html
+++ b/_patterns/navigation/banner.html
@@ -1,14 +1,14 @@
 <section>
-  <div>
+  <div class="relative">
     <div class="island-1-2 masthead grid grid-middle line push-0">
-      <div class="left unit xs-1-2 s-1-3 m-1-3 l-1-3">
+      <div class="left unit xs-1-2 s-1-3 m-1-3 l-1-4">
         <div>
           <a class="logo" href="/">
             <img src="/images/logo.svg" alt="#" aria-details="logo">
           </a>
         </div>
       </div>
-      <div class="nav unit xs-1-2 s-1-2 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
+      <div class="nav unit xs-1-2 s-1-2 m-1-2 l-1-2 island-1-2 pad-t-1-2 pad-b-1-2 pin-right-center">
         <nav class="right" role="navigation" id="nav" tabindex="0">
           <ul class="list-group-inline mega push-0">
             <li><a class="ib gutter-1-4 bold" href="/"><span>Home</span></a></li>
