--- a/products.html
+++ b/products.html
@@ -3,3 +3,6 @@ layout: default
 ---
 
 <h1>Products</h1>
+{% for product in site.products %}
+  {% pattern cards/product-card data=product %}
+{% enfor %}
