Add fix to spelling error

--- a/products.html
+++ b/products.html
@@ -5,4 +5,4 @@ layout: default
 <h1>Products</h1>
 {% for product in site.products %}
   {% pattern cards/product-card data=product %}
-{% enfor %}
+{% endfor %}
