--- a/_patterns/cards/product.html
+++ b/_patterns/cards/product.html
@@ -1,5 +1,5 @@
 <div class="card pad-t-1">
   <img class="max-width img-flex push-0" src="{{include.data.image}}" alt="">
-  <h3 class="island-1-2 push-0">{{include.data.title}}</h3>
+  <h3 class="island-1-2 push-0">{{include.data.name}}</h3>
   <div class="blackbg clearfix">{% pattern buttons/seemore %} <p class="price right push-0">${{include.data.price}}</p></div>
 </div>
