--- a/products.html
+++ b/products.html
@@ -7,3 +7,11 @@ layout: default
 {% pattern nav/nav %}
 
 {% pattern banner/banner heading="Products" text="Shop for your original art!" %}
+
+<div class="grid gutter-1-4">
+  {% for product in site.products %}
+  <div class="unit [xs-1 s-1 m-1-3] island-1-4">
+    {% pattern cards/product-card data=product %}
+  </div>
+  {% endfor %}
+</div>
