Add more java to product card

--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -5,4 +5,5 @@
   <h3 class="push-0">{{include.data.title}}</h3>
   <p class="push-1-2">{{include.data.description}}</p>
   {% pattern buttons/ghost %}
+  {% pattern buttons/primary text="Buy Now" url="include.data.url %}
 </div>
