Add updated button to creature card

--- a/_patterns/cards/creature-card.html
+++ b/_patterns/cards/creature-card.html
@@ -2,5 +2,5 @@
   <h2>Creature</h2>
   <img class="img-flex" src="/images/griffin.png" alt="griffin">
   <p>This creature looks cool and has a decent personality.</p>
-  {% pattern buttons/basic %}
+{% pattern buttons/basic text="See Collection" url="/griffins/" %}
 </div>
