--- a/_patterns/forms/alt-search.html
+++ b/_patterns/forms/alt-search.html
@@ -4,7 +4,7 @@
     <div class="unit xs-0 s-0 m-1-4 text-left gutter-1-4 sub-btn">
       {% pattern buttons/icon-search %}
     </div>
-    <div class="sub-pos unit xs-1 s-1 m-0 l-0 text-right">
+    <div class="sub-pos unit m-0 l-0 text-right">
       <button class="relative s-sub-btn" href="#">
         <i class="icon i-24">
           <svg>
