--- a/_patterns/banners/promo-banner.html
+++ b/_patterns/banners/promo-banner.html
@@ -1,6 +1,6 @@
 <a class="promo-banner island-1-2 text-center ib" href="#">
   <div class="wrapper pb-content">
-    <h2 class="pb-title text-upper push-0 giga">All mugs are now 20% off!</h2>
-    <p class="pb-description push-0 mega">Get it now, offer only lasts till Feburary 12th</p>
+    <h2 class="pb-title text-upper push-0 giga">{{include.heading}}</h2>
+    <p class="pb-description push-0 mega">{{include.description}}</p>
   </div>
 </a>
