Add a whole mess of stuff

--- a/_patterns/cards/sale-card.html
+++ b/_patterns/cards/sale-card.html
@@ -1,6 +1,6 @@
 <a class="product island-1-2 link-box relative chop" href="#">
   <div class="chop push-1-2">
-    <img class="img-flex card-img" src="/images/product-example.jpg" alt="">
+    <img class="img-flex card-img" src="/images/products/product-catonaut-mug.jpg" alt="">
   </div>
   <div class="pin-lt">
     <i class="icon i-96">
