--- a/_patterns/header/header-main.html
+++ b/_patterns/header/header-main.html
@@ -10,12 +10,12 @@
   </div>
   <div>
     <input type="checkbox" id="main-nav" class="main-check">
-    <label for="main-nav" class="main-label island-1-2 block" aria-label="This will expand the navigation menu.">
+    <label for="main-nav" class="main-label island-1-2 block" aria-label="This will expand the navigation menu when checked and will close when unchecked.">
       <i class="icon i-48">
         <svg><use xlink:href="/images/icons.svg#burger" /></svg>
       </i>
     </label>
-    <nav class="main-nav">
+    <nav class="main-nav" role="navigation" id="nav">
       <ul class="list-group-inline text-center grid grid-middle">
 
         <li class="unit xs-1 s-1 m-1-4 l-1-4 {% if page.highlight_nav == 'all products' %}current{% endif %}">
@@ -23,11 +23,11 @@
         </li>
 
         <li class="unit xs-1 s-1 m-1-4 l-1-4 relative">
-          <input type="checkbox" id="print-nav" class="print-check" aria-label="This will expand the prints navigation menu.">
+          <input type="checkbox" id="print-nav" class="print-check sub-nav" aria-label="This will expand the prints navigation menu when checked and will close when unchecked.">
           <label for="print-nav" class="island-1-2 block">
             <span>Art Prints</span>
           </label>
-          <nav class="print-nav w-1 zindex-1000 sec-nav" id="nav">
+          <nav class="print-nav w-1 zindex-1000 sec-nav">
             <ul class="list-group push-0">
               <li class="valign-middle {% if page.highlight_nav == 'framed' %}current{% endif %}">
                 <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the framed products page.">Framed</a>
@@ -43,52 +43,52 @@
         </li>
 
         <li class="unit xs-1 s-1 m-1-4 l-1-4 relative">
-          <input type="checkbox" id="cloth-nav" class="cloth-check" aria-label="This will expand the Apparels navigation menu.">
+          <input type="checkbox" id="cloth-nav" class="cloth-check sub-nav" aria-label="This will expand the Apparels navigation menu when checked and will close when unchecked.">
           <label for="cloth-nav" class="island-1-2">
             <span>Apparels</span>
           </label>
-          <nav class="cloth-nav w-1 zindex-1000 sec-nav" id="nav">
+          <nav class="cloth-nav w-1 zindex-1000 sec-nav">
             <ul class="list-group push-0">
               <li class="valign-middle {% if page.highlight_nav == 'menswear' %}current{% endif %}">
-                <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the menswear product page.">Menswear</a>
+                <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the mens clothing product page.">Menswear</a>
               </li>
               <li class="valign-middle {% if page.highlight_nav == 'womanswear' %}current{% endif %}">
-                <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the womanswear product page.">Womanswear</a>
+                <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the womans clothing product page.">Womanswear</a>
               </li>
               <li class="valign-middle {% if page.highlight_nav == 'kidswear' %}current{% endif %}">
-                <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the kidswear product page.">Kidswear</a>
+                <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the kids clothing product page.">Kidswear</a>
               </li>
               <li class="valign-middle {% if page.highlight_nav == 'babies' %}current{% endif %}">
-                <a class="block milli island-1-2" href="#" aria-label="">Babies</a>
+                <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the babies clothing products page.">Babies</a>
               </li>
             </ul>
           </nav>
         </li>
 
         <li class="unit xs-1 s-1 m-1-4 l-1-4 relative">
-          <input type="checkbox" id="elec-nav" class="elec-check">
+          <input type="checkbox" id="elec-nav" class="elec-check sub-nav" aria-label="This will expand the device cases navigation menu when checked and will close when unchecked.">
           <label for="elec-nav" class="island-1-2">
             <span>Device Cases</span>
           </label>
-          <nav class="elec-nav w-1 zindex-1000 sec-nav" id="nav">
+          <nav class="elec-nav w-1 zindex-1000 sec-nav">
             <ul class="list-group push-0">
               <li class="valign-middle {% if page.highlight_nav == 'android' %}current{% endif %}">
-                <a class="block milli island-1-2" href="#" aria-label="">Android</a>
+                <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the Android cases product page.">Android</a>
               </li>
               <li class="valign-middle {% if page.highlight_nav == 'iphone' %}current{% endif %}">
-                <a class="block milli island-1-2" href="#" aria-label="">Iphone</a>
+                <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the Iphone cases product page.">Iphone</a>
               </li>
               <li class="valign-middle {% if page.highlight_nav == 'ipad' %}current{% endif %}">
-                <a class="block milli island-1-2" href="#" aria-label="">Ipads</a>
+                <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the Ipad cases product page.">Ipads</a>
               </li>
               <li class="valign-middle {% if page.highlight_nav == 'mac' %}current{% endif %}">
-                <a class="block milli island-1-2" href="#" aria-label="">Macbook Pro</a>
+                <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the Macbook Pro cases product page.">Macbook Pro</a>
               </li>
               <li class="valign-middle {% if page.highlight_nav == 'laptop' %}current{% endif %}">
-                <a class="block milli island-1-2" href="#" aria-label="">Laptops</a>
+                <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the Laptop cases product page.">Laptops</a>
               </li>
               <li class="valign-middle {% if page.highlight_nav == 'tablet' %}current{% endif %}">
-                <a class="block milli island-1-2" href="#" aria-label="">Tablets</a>
+                <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the Tablet cases product page.">Tablets</a>
               </li>
             </ul>
           </nav>
