--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,14 +1,14 @@
 <a class="product island-1-2 link-box" href="#" aria-label="View details on the Catonaut ceramic mug that is $15.99">
   <div class="push-1-2 chop">
-    <img class="img-flex card-img" src="/images/product-example.jpg" alt="An image of Catonaut on a cup.">
+    <img class="img-flex card-img" src="{{include.data.image}}" alt="{{include.data.desc}}">
   </div>
   <div class="card-content grid">
-    <div class="unit xs-1-2">
-      <h2 class="title mega text-upper push-0">Catonaut</h2>
-      <p class="type milli">Ceramic Mug</p>
+    <div class="unit xs-2-3">
+      <h2 class="title mega push-0">{{include.data.name}}</h2>
+      <p class="type milli">{{include.data.cat}}</p>
     </div>
-    <div class="unit xs-1-2 text-right">
-      <p class="price bold">CA$15.99</p>
+    <div class="unit xs-1-3 text-right">
+      <p class="price bold">CA${{include.data.price}}</p>
     </div>
   </div>
 </a>
