--- a/products.html
+++ b/products.html
@@ -1,6 +1,14 @@
 ---
-layout: default
+layout: inside
 highlight_nav: all-products
 ---
 
 {% pattern banners/page-banner heading="All Products" button_text="Learn More" button_url="/" %}
+
+<div class="grid gutter-1-4">
+  {% for product in site.products %}
+    <div class="unit xs-1 s-1 m-1-3 island-1-4">
+      {% pattern cards/product-card data=product %}
+    </div>
+  {% endfor %}
+</div>
