--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>Products</h1>
+<!-- <h1>Products</h1>
 
 {% pattern nav/nav %}
 
@@ -14,4 +14,4 @@ layout: default
     {% pattern cards/product-card data=product %}
   </div>
   {% endfor %}
-</div>
+</div> -->
