--- a/index.html
+++ b/index.html
@@ -2,8 +2,26 @@
 layout: default
 ---
 
-<h1>Home!</h1>
-
-{% pattern nav/nav %}
-
 {% pattern banner/banner heading="Make it Original. Make it Yours." text="Locally made handcrafted original art" %}
+
+<div class="grid wrapper island-2">
+  {% for product in site.products  limit:3 %}
+    <div class="unit s-1-3 gutter">
+      <a href="{{products.url}}">
+        {% pattern cards/product-card %}
+      </a>
+    </div>
+  {% endfor %}
+</div>
+
+<div class="island-2 back-ground">
+  <div class="grid wrapper">
+    {% for product in site.products  limit:3 %}
+      <div class="unit s-1-3 gutter">
+        <a href="{{products.url}}">
+          {% pattern cards/product-card %}
+        </a>
+      </div>
+    {% endfor %}
+  </div>
+</div>
