Add some class to styles

--- a/cards.html
+++ b/cards.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-highlight_nav: products
+highlight_nav: cards
 ---
 
-{% pattern banner/banner-no-btn heading="Paintings" text="Shop for your original and local art!" %}
+{% pattern banner/banner-no-btn heading="Cards" text="Shop for your original and local art!" %}
 
 <div class="grid island-2 wrapper">
   {% for product in site.products limit:3 %}
