--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,8 +1,8 @@
 <div class="product-card">
-  <div class="embed embed-1by1 push">
+  <div class="embed embed-1by1 product-card-embed">
     <img class="embed-item" src="{{include.image | default:'/images/artwork-1.jpg'}}" alt="">
   </div>
   <h3 class="push-0">{{include.title}}</h3>
   <p class="push-1-2">{{include.description}}</p>
-  {% pattern buttons/basic text="Buy Now" url="/products/" %}
 </div>
+{% pattern buttons/basic text="Buy Now" url="/products/" %}
