--- a/index.html
+++ b/index.html
@@ -4,20 +4,10 @@ layout: default
 
 {% pattern banner/banner heading="Make it Original. Make it Yours." text="Locally made handcrafted original art" %}
 
-<div class="grid wrapper island-2">
-  {% for product in site.products  limit:3 %}
-    <div class="unit s-1-3 gutter">
-      <a href="{{products.url}}">
-        {% pattern cards/product-card %}
-      </a>
-    </div>
-  {% endfor %}
-</div>
-
-<div class="island-2 back-ground">
-  <div class="grid wrapper">
+<div class="island-2">
+  <div class="grid wrapper pad-b-2 pad-t-2">
     {% for product in site.products  limit:3 %}
-      <div class="unit s-1-3 gutter">
+      <div class="unit s-1 m-1-3 l-1-3 gutter text-center">
         <a href="{{products.url}}">
           {% pattern cards/product-card %}
         </a>
