Add jekyll generator project

--- a/_patterns/cards/creature-card.html
+++ b/_patterns/cards/creature-card.html
@@ -1,6 +1,7 @@
 <div class="card creature-card">
-  <h2>Creature</h2>
-  <img class="img-flex" src="/images/griffin.png" alt="griffin">
-  <p>This creature looks cool and has a decent personality.</p>
-{% pattern buttons/basic text="See Collection" url="/griffins/" %}
+  <h2>Monster Name</h2>
+  <img class="img-flex" src="/images/cryptid.png" alt="griffin">
+  <p>A gnarly description about said monster</p>
+  <strong>$ Pricing</strong>
+{% pattern buttons/primary text="See Collection" url="include.data.url" %}
 </div>
